fixed overflow bug

--- a/client/src/SplashPage.css
+++ b/client/src/SplashPage.css
@@ -1,8 +1,16 @@
+:root {
+  --text-shadow: 
+    2px 2px 1px hsla(0, 0%, 0%, 0.682), 
+    0 0 0 rgba(0, 0, 0, 0.532), 
+    2px 2px 3px hsl(0, 0%, 100%);
+
+    --transition: all 0.2s ease-in-out;
+}
+
 
 .solar-system-splash {
   width: var(--ss-container-width);
   height: var(--ss-container-width);
-
 }
 
 
@@ -18,14 +26,15 @@
   height:  var(--sun-diameter);
   width:  var(--sun-diameter);
   top: 50%;
-  right: 50%;
+  left:40vw;
   transform: translateX(50%) translateY(-50%);
   border-radius: 50%;
   box-shadow: inset 2rem 0 2rem 0rem rgba(157, 255, 230, 0.828),
   inset -2rem 2rem 3rem 2rem rgba(255, 85, 0, 0.2),
   inset 0 0 var(--sun-diameter-third) var(--sun-diameter) rgba(2, 2, 2, 0.825),
-  -3rem -2rem 1rem 3rem hsla(40, 100%, 50%, 0.922),
-  0 0 1rem 0.3rem rgba(255, 219, 182, 0.921),
+  -3rem -2rem 1rem 3rem hsla(40, 100%, 88%, 0.922),
+  0 0 12rem 0.3rem rgba(255, 219, 182, 0.921),
+  inset 0 0 0rem 0.3rem rgba(69, 61, 53, 0.921),
   0 0 3rem 0.2rem rgb(250, 218, 8),
   -12rem var(--sun-diameter-third) var(--sun-diameter-doubled)  var(--sun-diameter-third) rgba(129, 190, 250, 0.842),
   var(--sun-diameter-doubled) var(--sun-diameter-third) var(--sun-diameter-doubled)  var(--sun-diameter) rgba(239, 255, 136, 0.348),
@@ -60,7 +69,7 @@
   /* --offset: calc( var(--sun-diameter) * 4  ); */
   /* transform: translateX(var(--offset)); */
   /* transform: translateX(-6rem) translateY(2rem) rotateX(30deg); */
-  color: rgb(196, 213, 238);
+  color: rgb(167, 184, 209);
   /* color: var(--viewport-background); */
   text-align: center;
   text-shadow: 
@@ -106,6 +115,10 @@
   font-size: 5rem;
   text-align: center;
   letter-spacing: 0.3rem;
+  text-shadow: 
+    2px 2px 1px hsla(0, 0%, 0%, 0.682), 
+    -1px -1px 0 rgba(0, 0, 0, 0.532), 
+    2px 2px 3px hsl(0, 0%, 0%);
   animation-name: hello;
   animation-duration: 2s;
   animation-iteration-count: 1;
@@ -173,7 +186,22 @@
   top: 0;
   left: 0; 
   transform-origin: 50% 50%;
-  transform: scale(4) translateX(20rem);
+  transform: scale(4) translateX(-40rem);
+  animation-name: astro;
+  animation-duration: 6s;
+  animation-iteration-count: 1;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  opacity: 1;
+}
+
+.astro2 {
+  position: absolute;
+  bottom: 0;
+  right: 0; 
+  transform-origin: 50% 50%;
+  transform: scale(4) translateX(-40rem);
   animation-name: astro;
   animation-duration: 6s;
   animation-iteration-count: 1;
@@ -184,8 +212,8 @@
 }
 
 .astro-img {
-  max-width: 400px;
-  height: 400px;
+  /* max-width: 400px;
+  height: 400px; */
 }
 
 @keyframes astro  {
@@ -237,8 +265,15 @@
   box-shadow: var(--box-shadow-50);
   color: #fff;
   border: 1px solid #000;
-  transform: translateY(1px) scale(1.02);
+  transform: translateY(1px);
   filter: hue-rotate(-30deg) brightness(1.2) contrast(1.2);
+}
+
+
+.button-slide{
+  background-color: rgb(183, 73, 0);
+  position: relative;
+  overflow: hidden;
 }
 
 .button-slide::after {
@@ -249,7 +284,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #f40;
+  background-color: rgb(251, 0, 255);
   border-radius: inherit;
   /* transform: translateX(-100%); */
   transform: rotateX(90deg);
